generic mapper to repository